static/css/base.css
html {
    height: 100%;
}

body {
    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 164px);
    color: #555;
    font-family: 'Lato';
}

h1, h2 {
    font-family: "Bangers", system-ui;
    letter-spacing: 0.2rem;
}

/* Set all links to be green */
a {
    color: #01854d;
}

/* Optional: Change link color on hover */
a:hover, a:visited:hover {
    color: #f9ca3d;
}

/* Optional: Change link color for visited links */
a:visited {
    color: #04a963;;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    text-transform: uppercase;
    white-space: nowrap;

}

.main-logo-link {
    width: fit-content;
}

.shop-now-button {
    background: black;
    color: white;
    min-width: 260px;
}

.btn-black {
    background: black;
    color: white;
}

.btn-outline-black {
    background: white;
    color: black !important; /* use important to override link colors for <a> elements */
    border: 1px solid black;
}

.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
    background: black;
    color: white !important;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #222;
    color: white;
}

.text-black {
    color: #000 !important;
}

.border-black {
    border: 1px solid black !important;
}

.bg-black {
    background: #000 !important;
}

.overlay {
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: white;
	z-index: -1;
}

a.category-badge > span.badge:hover {
    background: #212529 !important;
    color: #fff !important;
}

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

input[name='q']::placeholder {
    color: #aab7c4;
}

.detail-bg {
    background-color: #f6f5f5;
}

.pricetag {
    color: #f6f5f5;
    background: #343a40;
}

.text-yellow {
    color: #f9ca3d;
}

#text-red {
    color: #de3939;
}

.text-green {
    color: #01854d;
}


.navbar-toggler {
    border: 3px solid #f8db06; /* Set the border color to match the icon color */
}

.navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23f8db06' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
}

.super-title {
    font-size: 9vh;
    color: #d25656;
    margin-bottom: 0;
}

.side {
    height: 0.6vh;
    width: 100%;
}

/* Nav Details */

.grow-text {
    transition: transform 0.3s ease-in-out; /* Smooth transition for the transform */
    color: black;
}

.grow-text:hover {
    transform: scale(1.2); /* Scales the text to 120% of its original size */
    color: #f9ca3d;
}

.announcement-bar {
    position: relative;
    width: 100%;
    background-color: #000000;
    color: #f9ca3d;
    overflow: hidden;
    white-space: nowrap;
    font-size: 2.6vh;
}

.text-wrapper {
    display: flex;
    animation: swipe 10s ease-in-out infinite;
}

.text {
    padding: 0.3em;
    text-transform: uppercase;
    min-width: 100%;
    box-sizing: border-box;
    display: inline-block;
    text-align: center; /* Center the text */
}

@keyframes swipe {
    0% {
        transform: translateX(100%);
    }
    3% {
        transform: translateX(0%);
    }
  
     50% {
        transform: translateX(0%);
    }
  
      53% {
        transform: translateX(-100%);
    }
  
      94% {
        transform: translateX(-100%);
    }
  
      97% {
        transform: translateX(-200%);
    }  

      100% {
        transform: translateX(-200%);
    }

}


/* Header */

.shopButton {
    box-shadow: -6px 7px 0px -1px #000000;
    background-color: #f9ca3d;
    border-radius: 6px;
    border: 2px solid #000000;
    display: inline-block;
    cursor: pointer;
    color: #000000;
    padding: 12px 12px;
    line-height: 1;
    height: 4.5rem;
    white-space: nowrap;
    text-align: center;
}

.shopButton a {
    color:#000000;
}

.shopButton a:hover {
    color:#de3939;
}

.shopButton h4 {
    font-family: "Bangers", system-ui;
    font-size: 2.5rem;
}


.star-title {
    position: relative;
    display: inline-block;
    text-align: center;
    font-size: 36px;
    color: #333;
    padding: 30px;
  }
  
  .star-title .star-star1,
  .star-title .star-star2,
  .star-title .star-star3 {
    position: absolute;
  }
  
  .star-title .star-star1 {
    right: 90px; 
    top: -30px; 
  }
  
  .star-title .star-star2 {
    right: 55px; 
    top: -1px;
    font-size: 45px;
  }
  
  .star-title .star-star3 {
    left: 40px; 
    bottom: -30px; 
  }

/* Footer */

#mc_embed_signup {
    width: 333px;
}

.index-top {
    z-index: 1050;
    background: white;
}

.line {
    height: 20px;
    width: 100%;
}

.red {
    background-color: #d25656;
}

.blue {
    background-color: #565fd2;
}

.yellow {
    background-color: #f9ca3d;
}

.green {
    background-color: #01854d;
}

#social a:visited {
    color: #f8db06;
}

#social a:hover {
    color: #d25656;
}

/* Artist details*/

.bg-green {
    background-color:#01854d;
}

.overlay2 {
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: #01854d;
	z-index: -1;
}

.artist-detail {
    padding: 20px;
    background-color: #ffffff;
    border-radius: 8px;
    margin: 20px 0;
}

.product-list {
    margin-top: 20px;
}

.product-item {
    margin-bottom: 10px;
}

.product-item {
    margin-bottom: 20px;
}
.product-item img {
    width: 100%; /* Ensure image takes the full width of the card */
    height: auto; /* Maintain aspect ratio */
    object-fit: contain; /* Scale the image to fit within the container without cropping */
    max-height: 200px; /* Limit the maximum height to keep images small */
}

/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #fff;
    background-color: #222;
    border-color: #222;
}

.allauth-form-inner-content a {
	color: #17a2b8; /* text-info */
}

/* Product Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 220px;
    }

    .header-index {
        padding-top: 180px;
    }
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    .header-container {
        padding-top: 116px;
    }

    .header-index {
        padding-top: 130px;
    }

    .title-wrap {
        text-wrap: wrap;
    }

    body {
        height: calc(100vh - 116px);
    }

    .star-title .star-star1 {
        right: 40px; 
        top: -30px; 
      }
      
      .star-title .star-star2 {
        right: 23px; 
        top: -1px; 
        font-size: 45px;
      }
      
      .star-title .star-star3 {
        left: 1px; 
        bottom: -40px; 
      }
}

@media (max-width: 768px) {
    .desktop-footer {
        display: none;
    }

    body {
        background: none; 
        height: auto; 
    }

    #header-mobile {
        margin-top: 4rem;
    }
    
}

@media (max-width: 380px) {

    #header-mobile {
        margin-top: 9rem;
    }

    .header-index {
        padding-top: 100px;
    }
    
}

